add terraform files

--- a/terraform/bucket/.env
+++ b/terraform/bucket/.env
@@ -1,5 +1,5 @@
-MGC_API_KEY="24f92526-9336-4d79-be31-5d83180c0cb1"
-MGC_OBJ_KEY_ID="732b963f-3621-40d1-8963-7165a49189a4"
-MGC_OBJ_KEY_SECRET="c4b91a15-c0a0-43b7-8d8c-ffb28d6f16d6"
+MGC_API_KEY="xxx"
+MGC_OBJ_KEY_ID="xxx"
+MGC_OBJ_KEY_SECRET="xxx"
 MGC_REGION="br-se1"
 MGC_ENV="test"
