add terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.tfstate
 *.tfstate.*
 
+# .lock files
+*.lock.*
+
 # Crash log files
 crash.log
 crash.*.log
@@ -35,3 +38,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore other files
+.env
